--- a/AddinTemplate.csproj
+++ b/AddinTemplate.csproj
@@ -1,16 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <PackageId>CYLee.Revit.AddinTemplate</PackageId>
-		<RootNamespace>CYLee.Revit.AddinTemplate</RootNamespace>
-        <AssemblyName>CYLee.Revit.AddinTemplate</AssemblyName>
+        <PackageId>CYLee.BIMTools.Revit.AddinTemplate</PackageId>
+        <RootNamespace>CYLee.BIMTools.Revit.AddinTemplate</RootNamespace>
+        <AssemblyName>CYLee.BIMTools.Revit.AddinTemplate</AssemblyName>
         <Authors>CYLee</Authors>
         <Company>CYLee</Company>
         <PackageProjectUrl>https://www.cylee.com</PackageProjectUrl>
         <Product>CYLee Revit Tools</Product>
-        <Version>0.0.1</Version>
+        <Version>0.0.0</Version>
     </PropertyGroup>
     <PropertyGroup>
-        <TargetFramework>net48</TargetFramework>
         <Platforms>x64</Platforms>
         <OutputType>Library</OutputType>
         <Prefer32Bit>false</Prefer32Bit>
@@ -23,65 +22,86 @@
         <ErrorReport>prompt</ErrorReport>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <NeutralLanguage>zh-TW</NeutralLanguage>
-        <Configurations>De R17;De R18;De R19;De R20;De R21</Configurations>
-        <Configurations>$(Configurations);Re R17;Re R18;Re R19;Re R20;Re R21</Configurations>
+        <Configurations>DeR17;DeR18;DeR19;DeR20;DeR21;DeR22;DeR23;DeR24;DeR25;ReR17;ReR18;ReR19;ReR20;ReR21;ReR22;ReR23;ReR24;ReR25</Configurations>
+        <Configurations>$(Configurations);ReR17;ReR18;ReR19;ReR20;ReR21;ReR22;ReR23;ReR24;ReR25</Configurations>
     </PropertyGroup>
-    <PropertyGroup
-        Condition="$(Configuration.Contains('De R'))">
+    <PropertyGroup Condition="$(Configuration.Contains('DeR'))">
+        <Optimize>false</Optimize>
         <DebugType>full</DebugType>
         <DebugSymbols>true</DebugSymbols>
-        <Optimize>false</Optimize>
         <DefineConstants>$(DefineConstants);DEBUG</DefineConstants>
         <BuildType>Debug</BuildType>
     </PropertyGroup>
-    <PropertyGroup
-        Condition="$(Configuration.Contains('Re R'))">
+    <PropertyGroup Condition="$(Configuration.Contains('ReR'))">
         <Optimize>true</Optimize>
         <DebugType>none</DebugType>
+        <DebugSymbols>false</DebugSymbols>
         <DefineConstants>$(DefineConstants);RELEASE</DefineConstants>
         <BuildType>Release</BuildType>
     </PropertyGroup>
-    <PropertyGroup
-        Condition="$(Configuration.Contains('R17'))">
+    <PropertyGroup Condition="$(Configuration.Contains('R17'))">
         <RevitVersion>2017</RevitVersion>
+        <TargetFramework>net48</TargetFramework>
         <DefineConstants>$(DefineConstants);R17</DefineConstants>
         <DefineConstants>$(DefineConstants);R17_OR_GREATER</DefineConstants>
     </PropertyGroup>
-    <PropertyGroup
-        Condition="$(Configuration.Contains('R18'))">
+    <PropertyGroup Condition="$(Configuration.Contains('R18'))">
         <RevitVersion>2018</RevitVersion>
+        <TargetFramework>net48</TargetFramework>
         <DefineConstants>$(DefineConstants);R18</DefineConstants>
         <DefineConstants>$(DefineConstants);R17_OR_GREATER;R18_OR_GREATER</DefineConstants>
     </PropertyGroup>
-    <PropertyGroup
-        Condition="$(Configuration.Contains('R19'))">
+    <PropertyGroup Condition="$(Configuration.Contains('R19'))">
         <RevitVersion>2019</RevitVersion>
+        <TargetFramework>net48</TargetFramework>
         <DefineConstants>$(DefineConstants);R19</DefineConstants>
         <DefineConstants>$(DefineConstants);R17_OR_GREATER;R18_OR_GREATER;R19_OR_GREATER</DefineConstants>
     </PropertyGroup>
-    <PropertyGroup
-        Condition="$(Configuration.Contains('R20'))">
+    <PropertyGroup Condition="$(Configuration.Contains('R20'))">
         <RevitVersion>2020</RevitVersion>
+        <TargetFramework>net48</TargetFramework>
         <DefineConstants>$(DefineConstants);R20</DefineConstants>
         <DefineConstants>$(DefineConstants);R17_OR_GREATER;R18_OR_GREATER;R19_OR_GREATER;R20_OR_GREATER</DefineConstants>
     </PropertyGroup>
-    <PropertyGroup
-        Condition="$(Configuration.Contains('R21'))">
+    <PropertyGroup Condition="$(Configuration.Contains('R21'))">
         <RevitVersion>2021</RevitVersion>
+        <TargetFramework>net48</TargetFramework>
         <DefineConstants>$(DefineConstants);R21</DefineConstants>
         <DefineConstants>$(DefineConstants);R17_OR_GREATER;R18_OR_GREATER;R19_OR_GREATER;R20_OR_GREATER;R21_OR_GREATER</DefineConstants>
     </PropertyGroup>
+    <PropertyGroup Condition="$(Configuration.Contains('R22'))">
+        <RevitVersion>2022</RevitVersion>
+        <TargetFramework>net48</TargetFramework>
+        <DefineConstants>$(DefineConstants);R22</DefineConstants>
+        <DefineConstants>$(DefineConstants);R17_OR_GREATER;R18_OR_GREATER;R19_OR_GREATER;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER</DefineConstants>
+    </PropertyGroup>
+    <PropertyGroup Condition="$(Configuration.Contains('R23'))">
+        <RevitVersion>2023</RevitVersion>
+        <TargetFramework>net48</TargetFramework>
+        <DefineConstants>$(DefineConstants);R23</DefineConstants>
+        <DefineConstants>$(DefineConstants);R17_OR_GREATER;R18_OR_GREATER;R19_OR_GREATER;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER</DefineConstants>
+    </PropertyGroup>
+    <PropertyGroup Condition="$(Configuration.Contains('R24'))">
+        <RevitVersion>2024</RevitVersion>
+        <TargetFramework>net48</TargetFramework>
+        <DefineConstants>$(DefineConstants);R24</DefineConstants>
+        <DefineConstants>$(DefineConstants);R17_OR_GREATER;R18_OR_GREATER;R19_OR_GREATER;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER;R24_OR_GREATER</DefineConstants>
+    </PropertyGroup>
+    <PropertyGroup Condition="$(Configuration.Contains('R25'))">
+        <RevitVersion>2025</RevitVersion>
+        <TargetFramework>net8.0-windows</TargetFramework>
+        <DefineConstants>$(DefineConstants);R25</DefineConstants>
+        <DefineConstants>$(DefineConstants);R17_OR_GREATER;R18_OR_GREATER;R19_OR_GREATER;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER;R24_OR_GREATER;R25_OR_GREATER</DefineConstants>
+    </PropertyGroup>
     <PropertyGroup>
-        <OutputPath>..\bin\$(BuildType)$(RevitVersion)\</OutputPath>
+        <OutputPath>.\bin\$(BuildType)$(RevitVersion)\</OutputPath>
     </PropertyGroup>
     <ItemGroup>
-        <Reference
-            Include="RevitAPI">
+        <Reference Include="RevitAPI">
             <HintPath>C:\Program Files\Autodesk\Revit $(RevitVersion)\RevitAPI.dll</HintPath>
             <Private>False</Private>
         </Reference>
-        <Reference
-            Include="RevitAPIUI">
+        <Reference Include="RevitAPIUI">
             <HintPath>C:\Program Files\Autodesk\Revit $(RevitVersion)\RevitAPIUI.dll</HintPath>
             <Private>False</Private>
         </Reference>
